--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -295,7 +295,112 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lyn-No-S50">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VEi-Je-6bl">
+                                        <rect key="frame" x="0.0" y="88" width="414" height="730"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="R4d-1q-izV">
+                                            <size key="itemSize" width="160" height="320"/>
+                                            <size key="headerReferenceSize" width="50" height="50"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bestProductCell" id="MgR-am-13y" customClass="bestProductCell" customModule="MarketCurlyB" customModuleProvider="target">
+                                                <rect key="frame" x="20" y="50" width="160" height="320"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Dce-JF-GXW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="320"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BOb-57-PqH">
+                                                            <rect key="frame" x="0.0" y="0.0" width="160" height="224"/>
+                                                            <color key="backgroundColor" red="0.9338517623" green="0.61105592990000002" blue="0.27912501680000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFz-SR-sUj">
+                                                            <rect key="frame" x="0.0" y="229" width="150" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jMz-LP-xgJ">
+                                                            <rect key="frame" x="0.0" y="254.5" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Kurly Only " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHW-YR-Xa6">
+                                                            <rect key="frame" x="0.0" y="280.5" width="67.5" height="16"/>
+                                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                            <color key="tintColor" name="AccentColor"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                            <color key="textColor" name="KurlyColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="BOb-57-PqH" secondAttribute="trailing" id="08c-AR-ZEH"/>
+                                                        <constraint firstItem="OHW-YR-Xa6" firstAttribute="leading" secondItem="Dce-JF-GXW" secondAttribute="leading" id="Dgo-Pr-6o2"/>
+                                                        <constraint firstItem="BOb-57-PqH" firstAttribute="leading" secondItem="Dce-JF-GXW" secondAttribute="leading" id="Ela-og-Xax"/>
+                                                        <constraint firstItem="ZFz-SR-sUj" firstAttribute="leading" secondItem="Dce-JF-GXW" secondAttribute="leading" id="HLX-WN-kPI"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ZFz-SR-sUj" secondAttribute="trailing" constant="10" id="LXx-gS-aXR"/>
+                                                        <constraint firstItem="BOb-57-PqH" firstAttribute="top" secondItem="Dce-JF-GXW" secondAttribute="top" id="OE4-dT-xKW"/>
+                                                        <constraint firstItem="ZFz-SR-sUj" firstAttribute="top" secondItem="BOb-57-PqH" secondAttribute="bottom" constant="5" id="Owf-Fd-TCr"/>
+                                                        <constraint firstItem="jMz-LP-xgJ" firstAttribute="top" secondItem="ZFz-SR-sUj" secondAttribute="bottom" constant="5" id="PD2-cD-reV"/>
+                                                        <constraint firstItem="OHW-YR-Xa6" firstAttribute="top" secondItem="jMz-LP-xgJ" secondAttribute="bottom" constant="5" id="UXR-1D-fLc"/>
+                                                        <constraint firstItem="jMz-LP-xgJ" firstAttribute="leading" secondItem="Dce-JF-GXW" secondAttribute="leading" id="Z6E-bb-i3L"/>
+                                                        <constraint firstItem="BOb-57-PqH" firstAttribute="height" secondItem="Dce-JF-GXW" secondAttribute="height" multiplier="0.7" id="pQb-y7-nC2"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <size key="customSize" width="160" height="320"/>
+                                                <connections>
+                                                    <outlet property="imgView" destination="BOb-57-PqH" id="12D-Hx-oXg"/>
+                                                    <outlet property="markLabel" destination="OHW-YR-Xa6" id="uAd-kB-N5s"/>
+                                                    <outlet property="nameLabel" destination="ZFz-SR-sUj" id="agk-kR-3Yl"/>
+                                                    <outlet property="priceLabel" destination="jMz-LP-xgJ" id="fH8-5p-LoT"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bestProductHeaderCell" id="XdX-5n-tsF" customClass="bestProductHeaderCell" customModule="MarketCurlyB" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BVc-Mr-TfN">
+                                                    <rect key="frame" x="371" y="27" width="15" height="10.5"/>
+                                                    <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="15" id="WBV-rA-rDz"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="추천순" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzI-nJ-khG">
+                                                    <rect key="frame" x="329.5" y="22" width="36.5" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="BVc-Mr-TfN" firstAttribute="leading" secondItem="gzI-nJ-khG" secondAttribute="trailing" constant="5" id="3Vw-Mb-aOe"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="BVc-Mr-TfN" secondAttribute="trailing" constant="20" id="5b9-Fm-763"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="BVc-Mr-TfN" secondAttribute="bottom" id="Jh7-dU-sE2"/>
+                                                <constraint firstItem="BVc-Mr-TfN" firstAttribute="bottom" secondItem="gzI-nJ-khG" secondAttribute="bottom" id="Qp7-Zt-bZs"/>
+                                                <constraint firstItem="BVc-Mr-TfN" firstAttribute="top" secondItem="gzI-nJ-khG" secondAttribute="top" id="ez2-xG-RyK"/>
+                                            </constraints>
+                                            <connections>
+                                                <outlet property="chevornImg" destination="BVc-Mr-TfN" id="Dyb-x6-XhP"/>
+                                                <outlet property="filterLabel" destination="gzI-nJ-khG" id="6sI-4P-Ie6"/>
+                                            </connections>
+                                        </collectionReusableView>
+                                    </collectionView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="VEi-Je-6bl" secondAttribute="bottom" id="4mh-fz-GuN"/>
+                                    <constraint firstItem="VEi-Je-6bl" firstAttribute="top" secondItem="Lyn-No-S50" secondAttribute="top" constant="88" id="7px-gw-gC9"/>
+                                    <constraint firstAttribute="trailing" secondItem="VEi-Je-6bl" secondAttribute="trailing" id="Vez-Qt-e5a"/>
+                                    <constraint firstItem="VEi-Je-6bl" firstAttribute="leading" secondItem="Lyn-No-S50" secondAttribute="leading" id="bwZ-6S-Rcz"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="N7w-i8-1As"/>
@@ -307,10 +412,13 @@
                             <constraint firstItem="N7w-i8-1As" firstAttribute="bottom" secondItem="Lyn-No-S50" secondAttribute="bottom" id="oe2-Wv-al1"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="VEi-Je-6bl" id="MmH-ru-mRJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ysT-rm-GZA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2048" y="885"/>
+            <point key="canvasLocation" x="2047.826086956522" y="884.59821428571422"/>
         </scene>
         <!--Firth Home View Controller-->
         <scene sceneID="mZ8-Z2-Qxj">
@@ -1736,6 +1844,9 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <image name="선물하기" width="41" height="40"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="KurlyColor">
             <color red="0.33899998664855957" green="0.043000001460313797" blue="0.48199999332427979" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
