--- a/MarketCurlyB/MarketCurlyB/DesignPattern/View/xib/bannerTableViewCell.xib
+++ b/MarketCurlyB/MarketCurlyB/DesignPattern/View/xib/bannerTableViewCell.xib
@@ -17,7 +17,8 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YpB-tH-u7b">
-                        <rect key="frame" x="0.0" y="11" width="320" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                        <color key="backgroundColor" red="0.9338517623" green="0.61105592990000002" blue="0.27912501680000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="YpB-tH-u7b" secondAttribute="height" multiplier="1:1" id="F3l-on-CKY"/>
                         </constraints>
@@ -25,7 +26,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="YpB-tH-u7b" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="94e-h4-n5Z"/>
-                    <constraint firstItem="YpB-tH-u7b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="b70-yW-5gp"/>
+                    <constraint firstItem="YpB-tH-u7b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9Rg-YE-ht5"/>
                     <constraint firstItem="YpB-tH-u7b" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" id="oE4-2q-IIf"/>
                 </constraints>
             </tableViewCellContentView>
